# nyt-crossword-solver

./: LICENSE.md  README.md  hello.py  pyproject.toml
nyt_crossword_solver/: agents.py  construct_crossword.py  crossword.py  solve.py  tools.py
puzzles/extracted/: puzzle-2025-02-08.json  puzzle-2025-02-17.json
