[project]
name = "nyt-crossword-solver"
version = "0.1.0"
description = "Solver for NY Times Crossword"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogen-agentchat>=0.4.5",
    "autogen-ext[openai]>=0.4.5",
    "pydantic>=2.10.6",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["nyt_crossword_solver"]