[project]
name = "nyt-crossword-solver"
version = "0.1.0"
description = "Solver for NY Times Crossword"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogen>=0.7.4",
    "autogen-agentchat>=0.4.7",
    "autogen-core",
    "autogen-ext[openai]>=0.4.7",
    "google-genai>=1.2.0",
    "pydantic>=2.10.6",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["nyt_crossword_solver"]

[tool.uv.sources]
autogen-core = { git = "https://github.com/microsoft/autogen.git", subdirectory = "python/packages/autogen-core" }
autogen-agentchat = { git = "https://github.com/microsoft/autogen.git", subdirectory = "python/packages/autogen-agentchat" }
